Tobias: fix alignment and button on connected map + scatter

--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,9 @@ circle .scatter-circle:hover  {
     top: 100%;
     left: 0;
 }
+
+
+.Tobias-connected-page-header{
+    min-height: 150px;
+    max-height: 150px;
+}
